# akonadi-mime

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  KF5AkonadiMimeConfig.cmake.in  KPimAkonadiMimeConfig.cmake.in  README.md  REUSE.toml  akonadi-mime.categories  akonadi-mimeprivate_export.h.in  metainfo.yaml
.reuse/: dep5
autotests/: CMakeLists.txt  addressattributetest.cpp  addressattributetest.h  collectionjobtest.cpp  collectionjobtest.h  imapaclattributetest.cpp  localfoldersrequestjobtest.cpp  localfoldersrequestjobtest.h  localfolderstest.cpp  localfolderstest.h  mailserializerplugintest.cpp  mailserializerplugintest.h  mailserializertest.cpp  mailserializertest.h  mdnstateattributetest.cpp  mdnstateattributetest.h  newmailnotifierattributetest.cpp  newmailnotifierattributetest.h  pop3resourceattributetest.cpp  pop3resourceattributetest.h  racetest.cpp  racetest.h
autotests/benchmarker/: CMakeLists.txt  main.cpp  maketest.cpp  maketest.h  test.cpp  test.h  testmaildir.cpp  testmaildir.h  testvcard.cpp  testvcard.h
autotests/benchmarker/maildir/: maildir.cpp  maildir.h  maildir20percentread.cpp  maildir20percentread.h  maildirfetchallheaders.cpp  maildirfetchallheaders.h  maildirfetchunreadheaders.cpp  maildirfetchunreadheaders.h  maildirimport.cpp  maildirimport.h  maildirremovereadmessages.cpp  maildirremovereadmessages.h
autotests/benchmarker/vcard/: vcard.cpp  vcard.h  vcardimport.cpp  vcardimport.h
autotests/messagetests/: CMakeLists.txt  messagetest.cpp  messagetest.h
autotests/messagetests/mails/: signed.mbox  x-pkcs7.mbox
autotests/unittestenv/kdehome/share/config/: akonadi_knut_resource_0rc  mailtransports
po/ar/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ast/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/az/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/bg/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/bs/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ca/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ca@valencia/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/cs/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/da/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/de/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/el/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/en_GB/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/eo/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/es/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/et/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/eu/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/fi/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/fr/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ga/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/gl/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/he/: libakonadi-kmime6.po
po/hi/: libakonadi-kmime6.po
po/hu/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ia/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/id/: libakonadi-kmime6.po
po/ie/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/it/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ja/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ka/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/kk/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/km/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ko/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/lt/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/lv/: libakonadi-kmime6.po
po/mai/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/mr/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/nb/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/nds/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/nl/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/nn/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/pl/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/pt/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/pt_BR/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ro/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ru/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/sa/: libakonadi-kmime6.po
po/sk/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/sl/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/sr/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/sr@ijekavian/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/sr@ijekavianlatin/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/sr@latin/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/sv/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ta/: libakonadi-kmime6.po
po/tr/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/ug/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/uk/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/zh_CN/: libakonadi-kmime5.po  libakonadi-kmime6.po
po/zh_TW/: libakonadi-kmime5.po  libakonadi-kmime6.po
serializers/: CMakeLists.txt  Messages.sh  akonadi_serializer_mail.cpp  akonadi_serializer_mail.desktop  akonadi_serializer_mail.h
src/: CMakeLists.txt  Messages.sh  addressattribute.cpp  addressattribute.h  akonadi-mime-index.qdoc  akonadi-mime.qdoc  akonadi-mime.qdocconf  attributeregistrar.cpp  commandbase.cpp  commandbase.h  dispatcherinterface.cpp  dispatcherinterface.h  dispatcherinterface_p.h  dispatchmodeattribute.cpp  dispatchmodeattribute.h  emptytrashcommand.cpp  emptytrashcommand.h  errorattribute.cpp  errorattribute.h  filteractionjob.cpp  filteractionjob_p.h  imapaclattribute.h  imapresource.kcfg  markascommand.cpp  markascommand.h  markascommandhelper.cpp  markascommandhelper_p.h  mdnstateattribute.cpp  mdnstateattribute.h  messageflags.cpp  messageflags.h  messagefolderattribute.cpp  messagefolderattribute.h  messagemodel.cpp  messagemodel.h  messageparts.cpp  messageparts.h  messagequeuejob.cpp  messagequeuejob.h  messagestatus.cpp  (+35 more)
src/quick/: CMakeLists.txt  types.h
tests/: CMakeLists.txt  abort.cpp  clearerror.cpp  foldersrequester.cpp  foldersrequester.h  headfetcher.cpp  headfetcher.h  queuer.cpp  sendqueued.cpp
